--- a/CMP_N7/index.html
+++ b/CMP_N7/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="image/png" href="/CMP_N7/src/assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./src/assets/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@400;700;900&family=Share+Tech+Mono&display=swap" rel="stylesheet">    
-    <link rel="stylesheet" href="../CMP_N7/src/assets/app-logo.png">
+    <link rel="stylesheet" href="./src/css/normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CMP-N7</title>
   </head>
